aut/deployment/ingress/ingress_gke.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
 name: gateway
spec:
  rules:
  - http:
      paths:
      - path: /boa/admin/accounts
        backend:
          serviceName: admin
          servicePort: 30080
      - path: /admin/*
        backend:
          serviceName: admin
          servicePort: 30080
      - path: /admin/
        backend:
          serviceName: admin
          servicePort: 30080
      - path: /time
        backend:
          serviceName: admin
          servicePort: 30080
      - path: /customer/*
        backend:
          serviceName: customer
          servicePort: 30080
      - path: /customer/
        backend:
          serviceName: customer
          servicePort: 30080
      - path: /accounts/*
        backend:
          serviceName: customer
          servicePort: 30080
      - path: /balance
        backend:
          serviceName: customer
          servicePort: 30080
